--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hangman-kaj",
-  "homepage": "https://github.com/JakkNaj/react-hangman-kaj",
+  "homepage": "https://jakknaj.github.io/react-hangman-kaj/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
